tests/positive/pr112_case_scrutinee_once.safe
-- Test: pr112_case_scrutinee_once
-- Description: Case scrutinees are evaluated exactly once during MIR lowering.
-- Expected: ACCEPT

package pr112_case_scrutinee_once

   function read_opcode returns integer

      return 2;

   function label returns string

      case read_opcode ()
         when 1
            return "one";

         when 2
            return "two";

         when others
            return "other";

