tests/negative/neg_pr118d_string_case.safe
-- Test: neg_pr118d_string_case
-- Description: String case choices remain limited to string literals.
-- Expected: REJECT unsupported_source_construct

package neg_pr118d_string_case

   name : string = "Ada";
   match : string = "Ada";
   code : integer = 0;

   case name
      when match
         code = 1;
      when others
         code = 2;

   print (code)
